--- a/static/styles/products/product-detail.css
+++ b/static/styles/products/product-detail.css
@@ -215,14 +215,12 @@
 
 
 /* Characteristics */
-.product-detail .characteristics {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 18px;
-    margin-top: 80px;
+.product-detail .description {
+        width: 60%;
+        margin: 0 4%;
 }
 
-.product-detail .characteristics .characteristics_item {
+.product-detail .description .characteristics_item {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -230,8 +228,8 @@
     padding: 12px 16px;
 }
 
-.product-detail .characteristics .characteristics_item span,
-.product-detail .characteristics .characteristics_item p {
+.product-detail .description .characteristics_item span,
+.product-detail .description .characteristics_item p {
     flex: 1;
     font-weight: 400;
     font-size: 13px;
@@ -242,16 +240,16 @@
     /* color: var(--white); */
 }
 
-.product-detail .characteristics .characteristics_item:nth-child(6n+1),
-.product-detail .characteristics .characteristics_item:nth-child(6n+2),
-.product-detail .characteristics .characteristics_item:nth-child(6n+3) {
+.product-detail .description .characteristics_item:nth-child(6n+1),
+.product-detail .description .characteristics_item:nth-child(6n+2),
+.product-detail .description .characteristics_item:nth-child(6n+3) {
     background: var(--dark_grey);
     color: var(--white) !important;
 } 
 
-.product-detail .characteristics .characteristics_item:nth-child(6n+4),
-.product-detail .characteristics .characteristics_item:nth-child(6n+5),
-.product-detail .characteristics .characteristics_item:nth-child(6n+6) {
+.product-detail .description .characteristics_item:nth-child(6n+4),
+.product-detail .description .characteristics_item:nth-child(6n+5),
+.product-detail .description .characteristics_item:nth-child(6n+6) {
     background: transparent;
 }
 
