--- a/static/styles/products/products.css
+++ b/static/styles/products/products.css
@@ -112,7 +112,6 @@
 .featured_group .product {
     border-radius: 33px;
     background: #232323;
-    height: 100%;
     width: 100%;
     position: relative;
     padding: 20px 5px;
@@ -144,7 +143,7 @@
 .featured_group .product .product_img {
     position: relative;
     width: 100%;
-    height: 412px;
+    height: 290px;
     background-position: center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
@@ -161,7 +160,7 @@
 .featured_group .product .product_img img {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100%; 
     object-fit: cover;
     transition: transform 0.3s ease-in-out;
     
@@ -184,8 +183,9 @@
 .featured_group .product .product_info .ptoduct_price {
     display: flex;
     align-items: center;
+    justify-content:space-between;
     margin-top:5px;
-    gap: 20px;
+    gap: 5px;
 }
 
 .products_group .product .product_info .ptoduct_price .main_price,
@@ -247,14 +247,13 @@
 }
 
 .add_to_cart {
-    height: 43px;
-    width: auto;
+    height: 40px;
+    width: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
     position: static;
-    bottom: 0;
     font-weight: 700;
     font-size: 12px;
     color: #ffff;
