--- a/templates/shop_cart/cart_summary.html
+++ b/templates/shop_cart/cart_summary.html
@@ -1,5 +1,4 @@
-{% extends '_base.html' %} {% load static %} {% load static i18n %} {% block
-title %}<title>Cart Shop | Ahmad Electronics Store</title>{% endblock %} {%
+{% extends '_base.html' %} {% load static %} {% load static i18n %} {% block title %} <title>Cart Shop | Ahmad Electronics Store</title>{% endblock %} {%
 block css %}<link
   rel="stylesheet"
   href="{% static 'styles/shop_cart/cart.css' %}"
