--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -25,13 +25,19 @@
           </div>
         </div>
         <div class="right">
+           <img src="../../static/assets/home/tent-img.png" alt="tent-top" class="tent-top">
           <div class="swiper newsSwipper news_slider">
+            
             <div class="swiper-wrapper">
+             
               <div class="swiper-slide news_slider_items">
+              
                 <img
                   src="https://img.freepik.com/free-vector/black-friday-super-sale-illustration-with-neon-light-podium-dark-background_1314-3556.jpg?t=st=1738997959~exp=1739001559~hmac=6428bcdb6a5b6c2d091f49754fd3c782b5213b269fc3da3c9b494a2f101c7166&w=1060"
                   alt="news slider item"
+                  class="main-slide"
                 />
+                
               </div>
               <div class="swiper-slide news_slider_items">
                 <img
@@ -70,8 +76,11 @@
                 />
               </div>
             </div>
+            
+          
             <div class="swiper-pagination"></div>
           </div>
+          <img src="../../static/assets/home/wheels-img.png" alt="wheels-bottom" class="wheels-bottom">
           <div class="privileges_group">
             <div class="privilege">
               <div class="icon">
